Initial react components.

--- a/app/Resources/AppBundle/views/Default/index.html.twig
+++ b/app/Resources/AppBundle/views/Default/index.html.twig
@@ -1,5 +1,3 @@
 {% extends "::base.html.twig" %}
 
-{% block content %}
-<div data-component="RfcEventTimeline"></div>
-{% endblock %}
+{% block content %}{% endblock %}
