--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,10 +5,11 @@
         <title>PHP RFC Watch</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="/assets/admin-lte/css/AdminLTE.min.css" />
     </head>
     <body>
-        <div class="container">
+        <div class="container" style="max-width: 600px; margin:auto;">
             <div class="row">
                 <div class="col-xs-12"><h1>PHP RFC Watch</h1></div>
             </div>
