Add RfcList component and descendants.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="/assets/admin-lte/css/AdminLTE.min.css" />
     </head>
-    <body>
-        <div class="container" style="max-width: 600px; margin:auto;">
+    <body style="background-color: #f2f2f2;">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12"><h1>PHP RFC Watch</h1></div>
             </div>
