Add about and fix typo.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="/assets/admin-lte/css/AdminLTE.min.css" />
+
     </head>
     <body style="background-color: #f2f2f2;">
         <div class="container">
@@ -20,11 +21,14 @@
             </div>
         </div>
 
+        <a href="https://github.com/beberlei/php-rfc-watch"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react-with-addons.js"></script>
         {% if app.environment == "dev" %}
         <script src="{{ asset('webpack-dev-server.js') }}"></script>
         {% endif %}
         <script type="text/javascript" src="{{ asset('assets/bundle.js') }}"></script>
+
     </body>
 </html>
