--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="/assets/admin-lte/css/AdminLTE.min.css" />
-
+        <link rel="stylesheet" type="text/css" href="/assets/rfcwatch.css" />
     </head>
     <body style="background-color: #f2f2f2;">
         <div class="container">
