Adding a right padding on the timeline clock icons

--- a/web/assets/rfcwatch.css
+++ b/web/assets/rfcwatch.css
@@ -22,3 +22,7 @@
     border-top-right-radius: 2px;
     border-bottom-right-radius: 2px;
 }
+
+.timeline-item .fa-clock-o {
+    margin-right: 4px;
+}
