--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,9 +26,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react-with-addons.js"></script>
         {% if app.environment == "dev" %}
-        <script src="{{ asset('webpack-dev-server.js') }}"></script>
+        <script src="http://localhost:8090{{ asset('webpack-dev-server.js') }}"></script>
         {% endif %}
-        <script type="text/javascript" src="{{ asset('assets/bundle.js') }}"></script>
+        <script type="text/javascript" src="{% if app.environment == "dev" %}http://localhost:8090{% endif %}{{ asset('assets/bundle.js') }}"></script>
 
     </body>
 </html>
