--- a/app/Resources/AppBundle/views/Default/index.html.twig
+++ b/app/Resources/AppBundle/views/Default/index.html.twig
@@ -1,3 +1,7 @@
 {% extends "::base.html.twig" %}
 
-{% block content %}{% endblock %}
+{% block content %}
+PHP RFC Watch is processing names and e-mail addresses of voters on PHP RFCs
+and as such I have shut it down for now, until I can make it GDPR compliant by
+asking voters for their consent to be listed on this page.
+{% endblock %}
