--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,16 +19,22 @@
                 {% block content %}
                 {% endblock %}
             </div>
+
+            <div class="row">
+                <div class="col-xs-12"><p align="center"><a href="https://beberlei.de/pages/imprint.html">Imprint &amp; Privacy Policy</a></p></div>
+            </div>
         </div>
 
         <a href="https://github.com/beberlei/php-rfc-watch"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
+        {#
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react-with-addons.js"></script>
         {% if app.environment == "dev" %}
         <script src="http://localhost:8090{{ asset('webpack-dev-server.js') }}"></script>
         {% endif %}
         <script type="text/javascript" src="{% if app.environment == "dev" %}http://localhost:8090{% endif %}{{ asset('assets/bundle.js') }}"></script>
+        #}
 
     </body>
 </html>
