Add Newsletter workflow.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -21,6 +21,17 @@ main {
             text-decoration: none;
         }
     }
+
+    h1 {
+        a {
+            color: #000;
+            text-decoration: none;
+
+            &:hover {
+                color: #000;
+            }
+        }
+    }
 }
 
 footer {
