--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
+<p class="mb-4 text-center">
+    <small><a href="{{ path('notify') }}">Notify me when the vote for RFC is completed</a></small>
+</p>
+
 <div id="app"></div>
 {% endblock %}
