--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,12 +16,9 @@
 
         <main>
             <div class="container">
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col-sm">
-                        <h1><img height="40" src="/php.svg"> RFC Watch</h1>
-                    </div>
-                    <div class="col-sm">
-                        <a href="#">Notify me when Voting on RFCs is completed</a>
+                        <h1 class="text-center"><a href="/"><img height="40" src="/php.svg"> RFC Watch</a></h1>
                     </div>
                 </div>
 
@@ -29,11 +26,11 @@
 
             </div>
         </main>
-        
+
         <footer class="container-fluid bg-faded">
             <div class="row">
                 <div class="col-sm">
-                    Built by Tideways.com | 
+                    Built by Tideways.com |
                     <a href="https://tideways.com/imprint">Imprint</a> |
                     <a href="https://tideways.com/tos">Terms Of Service</a> |
                     <a href="https://tideways.com/privacy">Privacy Policy</a>
