--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
 
         <title>PHP RFC Watch</title>
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+        <link type="application/atom+xml" rel="alternate" href="/atom.xml" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
