Fix column-count and flexboxing.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -32,6 +32,12 @@ main {
             }
         }
     }
+
+    #app {
+        .card-columns {
+            column-count: 2;
+        }
+    }
 }
 
 footer {
