Add admin to select target version and discussions.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="sponsored-by">
-                <a target="_blank" href="https://tideways.com">PHP RFC Watch is sponsored by <img width="16" height="16" src="/tideways.png" /> Tideways <span class="d-none d-lg-inline">- Profiling, Monitoring and Exception Tracking for PHP</span></a>
+                <a target="_blank" href="https://tideways.com?pk_campaign=rfcwatch">PHP RFC Watch is sponsored by <img width="16" height="16" src="/tideways.png" /> Tideways <span class="d-none d-lg-inline">- Profiling, Monitoring and Exception Tracking for PHP</span></a>
             </div>
         </nav>
 
