Add link to atom feed and github into footer.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,6 +32,8 @@
             <div class="row">
                 <div class="col-sm">
                     Built by Tideways.com |
+                    <a href="https://github.com/beberlei/php-rfc-watch">Github</a> |
+                    <a href="/atom.xml">Atom Feed</a> |
                     <a href="https://tideways.com/imprint">Imprint</a> |
                     <a href="https://tideways.com/tos">Terms Of Service</a> |
                     <a href="https://tideways.com/privacy">Privacy Policy</a>
