Bugfix in automatic reject detection, exportable info for each RFC to send newsletter with.

--- a/templates/Default/admin.html.twig
+++ b/templates/Default/admin.html.twig
@@ -24,6 +24,7 @@
             </div>
             <div class="card-footer">
                 <a href="{{ path('admin_edit_rfc', {'id': rfc.id}) }}">Edit</a>
+                <a href="{{ path('admin_export_rfc', {'id': rfc.id}) }}">Export</a>
             </div>
         </div>
         {% endfor %}
