--- a/templates/Default/adminExportRfc.html.twig
+++ b/templates/Default/adminExportRfc.html.twig
@@ -3,17 +3,17 @@
 {% block content %}
     <h1>Admin: {{ rfc.title }}</h1>
 
-    <input style="width: 100%;" value="RFC {% if rfc.status == "rejected" %}Rejected{% else %}Accepted{% endif %} {{ rfc.title }}" />
+    <input style="width: 100%;" value="PHP RFC {% if rfc.status == "rejected" %}Rejected{% else %}Accepted{% endif %}: {{ rfc.title }}" />
 
     <textarea style="width: 100%; height: 300px;">Hey there fellow PHP RFC Watcher,
 
-**RFC:** [{{ rfc.title }}]({{ rfc.url }})
-**Discussions:** {% for discussion in rfc.discussions %}[#{{ loop.index }}]({{ discussion }}){% if not loop.last %}, {% endif %}{% endfor %}
+- **RFC:** [{{ rfc.title }}]({{ rfc.url }})
+- **Discussions:** {% for discussion in rfc.discussions %}[#{{ loop.index }}]({{ discussion }}){% if not loop.last %}, {% endif %}{% endfor %}
 
-**Target:** {{ rfc.targetPhpVersion }}
-**Status:** {% if rfc.status == "rejected" %}Rejected{% else %}Accepted{% endif %}
+- **Target:** {{ rfc.targetPhpVersion }}
+- **Status:** {% if rfc.status == "rejected" %}Rejected{% else %}Accepted{% endif %}
 
-**Votes:** {% for vote in rfc.currentResults %}{{ vote.votes }} {{ vote.option }}{% if not loop.last %}, {% endif %}{% endfor %}
+- **Votes:** {% for vote in rfc.currentResults %}{{ vote.votes }} {{ vote.option }}{% if not loop.last %}, {% endif %}{% endfor %}
 
     </textarea>
 
