Fix card columns responsive.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -37,6 +37,11 @@ main {
         .card-columns {
             column-count: 2;
         }
+        @media (max-width: 576px) {
+            .card-columns {
+                column-count: 1;
+            }
+        }
     }
 }
 
