--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -49,3 +49,12 @@ footer {
     text-align: center;
     color: #999;
 }
+
+.card-header a {
+    text-decoration: none;
+    font-weight: bold;
+}
+.meta {
+    color: #666666;
+    font-size: 10pt;
+}
