Change from Bootstrap 4 to Tailwind CSS

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,4 +1,6 @@
-@import '~bootstrap/scss/bootstrap.scss';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 nav {
     .sponsored-by {
