--- a/templates/Default/admin.html.twig
+++ b/templates/Default/admin.html.twig
@@ -1,30 +1,32 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-    <h1>Admin</h1>
+    <h1 class="uppercase text-xl font-bold">Admin</h1>
 
-    <div class="card-columns">
+    <div class="flex flex-wrap items-stretch">
         {% for rfc in rfcs %}
-        <div class="card">
-            <div class="card-header">{{ rfc.title }}</div>
-            <div class="card-body">
-                <p>
-                    <strong>Target Version:</strong>
-                    {{ rfc.targetPhpVersion|default('unknown') }}
-                </p>
+        <div class="w-1/3 p-2">
+            <div class="rounded shadow bg-white p-4">
+                <div class="card-header">{{ rfc.title }}</div>
+                <div class="text-sm text-gray-600">
+                    <p>
+                        <strong>Target Version:</strong>
+                        {{ rfc.targetPhpVersion|default('unknown') }}
+                    </p>
 
-                <p>
-                    <strong>Discussions:</strong>
-                    {% for discussion in rfc.discussions %}
-                        <a href="{{ discussion }}">#{{ loop.index }}</a>
-                        {% else %}
-                        None
-                    {% endfor %}
-                </p>
-            </div>
-            <div class="card-footer">
-                <a href="{{ path('admin_edit_rfc', {'id': rfc.id}) }}">Edit</a>
-                <a href="{{ path('admin_export_rfc', {'id': rfc.id}) }}">Export</a>
+                    <p>
+                        <strong>Discussions:</strong>
+                        {% for discussion in rfc.discussions %}
+                            <a href="{{ discussion }}">#{{ loop.index }}</a>
+                            {% else %}
+                            None
+                        {% endfor %}
+                    </p>
+                </div>
+                <div class="flex">
+                    <a class="text-bold rounded shadow bg-blue-500 p-1 text-white mr-4 no-underline" href="{{ path('admin_edit_rfc', {'id': rfc.id}) }}">Edit</a>
+                    <a class="text-bold rounded shadow bg-blue-500 p-1 text-white mr-4 no-underline" href="{{ path('admin_export_rfc', {'id': rfc.id}) }}">Export</a>
+                </div>
             </div>
         </div>
         {% endfor %}
