--- a/templates/Default/unsubscribe.html.twig
+++ b/templates/Default/unsubscribe.html.twig
@@ -1,8 +1,8 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-<div class="row">
-    <div class="col-md">
+<div class="flex">
+    <div class="w-1/2 mx-auto">
         <p>
             We have unsubscribed you from the PHP RFC Watch Notifications.
         </p>
