--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,18 +8,18 @@
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
         <link type="application/atom+xml" rel="alternate" href="/atom.xml" />
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <body class="bg-gray-200">
+        <nav class="flex flex-wrap bg-gray-800 p-2">
             <div class="sponsored-by">
-                <a target="_blank" href="https://tideways.com?pk_campaign=rfcwatch">PHP RFC Watch is sponsored by <img width="16" height="16" src="/tideways.png" /> Tideways <span class="d-none d-lg-inline">- Profiling, Monitoring and Exception Tracking for PHP</span></a>
+                <a target="_blank" href="https://tideways.com?pk_campaign=rfcwatch">PHP RFC Watch is sponsored by <img class="h-4 inline-block" src="/tideways.png" /> Tideways <span class="d-none d-lg-inline">- Profiling, Monitoring and Exception Tracking for PHP</span></a>
             </div>
         </nav>
 
         <main>
-            <div class="container">
+            <div class="container mx-auto">
                 <div class="row mb-2">
                     <div class="col-sm">
-                        <h1 class="text-center"><a href="/"><img height="40" src="/php.svg"> RFC Watch</a></h1>
+                        <h1 class="text-center"><a class="text-4xl" href="/"><img class="h-10 inline-block" src="/php.svg"> RFC Watch</a></h1>
                     </div>
                 </div>
 
