--- a/templates/Default/confirm.html.twig
+++ b/templates/Default/confirm.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="flex">
-    <div class="w-1/2 mx-auto">
+    <div class="w-full md:w-1/2 mx-auto p-2">
         <p class="mb-8">
             We sent semi-automated updates whenever an RFC is accepted
             or rejected by voting. Stop with the constant refresh of
