--- a/templates/Default/newsletter.html.twig
+++ b/templates/Default/newsletter.html.twig
@@ -5,7 +5,7 @@
     <input type="hidden" name="list" value="06b270ac-7323-11e8-9a3c-dab956361052">
     <input type="hidden" name="url"/>
 
-    <div class="mb-8">
+    <div class="mb-8 p-2">
         <p>
             We sent semi-automated updates whenever an RFC is accepted
             or rejected by voting. Stop with the constant refresh of
@@ -15,26 +15,24 @@
         </p>
     </div>
 
-    <div class="w-1/2 rounded shadow-lg bg-white mx-auto p-10">
-        <div class="col-md-6">
-            <div class="card">
-                <p class="mb-4">
-                    <input type="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="email" placeholder="E-Mail address"/>
-                </p>
+    <div class="w-full md:w-1/2 mx-auto p-2">
+        <div class="rounded shadow-lg bg-white p-10">
+            <p class="mb-4">
+                <input type="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="email" placeholder="E-Mail address"/>
+            </p>
 
-                <p class="mb-4">
-                    By clicking on the Subscribe button I am giving my consent for Tideways to hold my email address for the purposes of contacting me with occasional information about PHP RFCs and Releases.
-                </p>
+            <p class="mb-4">
+                By clicking on the Subscribe button I am giving my consent for Tideways to hold my email address for the purposes of contacting me with occasional information about PHP RFCs and Releases.
+            </p>
 
-                <p class="mb-4">
-                    You can unsubscribe with one click at any time and withdraw your consent. No spam. We will never share your e-mail address. <a href="https://tideways.com/privacy">Our Privacy Policy</a>
-                </p>
+            <p class="mb-4">
+                You can unsubscribe with one click at any time and withdraw your consent. No spam. We will never share your e-mail address. <a href="https://tideways.com/privacy">Our Privacy Policy</a>
+            </p>
 
-                <div class="text-center">
-                    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                        Signup for Notifications
-                    </button>
-                </div>
+            <div class="text-center">
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                    Signup for Notifications
+                </button>
             </div>
         </div>
     </div>
