--- a/templates/Default/newsletter.html.twig
+++ b/templates/Default/newsletter.html.twig
@@ -21,19 +21,19 @@
                 <input type="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" name="email" placeholder="E-Mail address"/>
             </p>
 
-            <p class="mb-4">
-                By clicking on the Subscribe button I am giving my consent for Tideways to hold my email address for the purposes of contacting me with occasional information about PHP RFCs and Releases.
-            </p>
-
-            <p class="mb-4">
-                You can unsubscribe with one click at any time and withdraw your consent. No spam. We will never share your e-mail address. <a href="https://tideways.com/privacy">Our Privacy Policy</a>
-            </p>
-
-            <div class="text-center">
+            <div class="text-center mb-4">
                 <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                     Signup for Notifications
                 </button>
             </div>
+
+            <p class="mb-4">
+                By clicking on the Subscribe button I am giving my consent for Tideways to hold my email address for the purposes of contacting me with occasional information about PHP RFCs and Releases.
+            </p>
+
+            <p class="mb-0">
+                You can unsubscribe with one click at any time and withdraw your consent. No spam. We will never share your e-mail address. <a href="https://tideways.com/privacy">Our Privacy Policy</a>
+            </p>
         </div>
     </div>
 </form>
