Move newsletter notifications around and improve wording.

--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <p class="mb-4 text-center">
-    <small><a href="{{ path('notify') }}">Subscribe to RFC vote notifications</a></small>
+    <small><a class="underline" href="{{ path('notify') }}">Subscribe to RFC vote notifications</a></small>
 </p>
 
 <div id="app"></div>
