--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
     </head>
     <body class="bg-gray-200">
         <nav class="flex flex-wrap bg-gray-800 p-2">
-            <div class="sponsored-by">
+            <div class="text-xs text-white">
                 <a target="_blank" href="https://tideways.com?pk_campaign=rfcwatch">PHP RFC Watch is sponsored by <img class="h-4 inline-block" src="/tideways.png" /> Tideways <span class="d-none d-lg-inline">- Profiling, Monitoring and Exception Tracking for PHP</span></a>
             </div>
         </nav>
@@ -28,16 +28,14 @@
             </div>
         </main>
 
-        <footer class="container-fluid bg-faded">
-            <div class="row">
-                <div class="col-sm">
-                    Built by Tideways.com |
-                    <a href="https://github.com/beberlei/php-rfc-watch">Github</a> |
-                    <a href="/atom.xml">Atom Feed</a> |
-                    <a href="https://tideways.com/imprint">Imprint</a> |
-                    <a href="https://tideways.com/tos">Terms Of Service</a> |
-                    <a href="https://tideways.com/privacy">Privacy Policy</a>
-                </div>
+        <footer class="mt-10">
+            <div class="w-full text-center text-sm text-gray-800">
+                Built by <a href="https://tideways.com">Tideways.com</a> |
+                <a href="https://github.com/beberlei/php-rfc-watch">Github</a> |
+                <a href="/atom.xml">Atom Feed</a> |
+                <a href="https://tideways.com/imprint">Imprint</a> |
+                <a href="https://tideways.com/tos">Terms Of Service</a> |
+                <a href="https://tideways.com/privacy">Privacy Policy</a>
             </div>
         </footer>
 
