--- a/templates/Default/adminExportRfc.html.twig
+++ b/templates/Default/adminExportRfc.html.twig
@@ -1,11 +1,11 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-    <h1>Admin: {{ rfc.title }}</h1>
+    <h1 class="text-xl font-bold">Admin: {{ rfc.title }}</h1>
 
-    <input style="width: 100%;" value="PHP RFC {% if rfc.status == "rejected" %}Rejected{% else %}Accepted{% endif %}: {{ rfc.title }}" />
+    <input class="p-2 mb-8 shadow rounded" style="width: 100%;" value="PHP RFC {% if rfc.status == "rejected" %}Rejected{% else %}Accepted{% endif %}: {{ rfc.title }}" />
 
-    <textarea style="width: 100%; height: 300px;">Hey there fellow PHP RFC Watcher,
+    <textarea class="p-2 shadow rounded" style="width: 100%; height: 300px;">Hey there fellow PHP RFC Watcher,
 
 - **RFC:** [{{ rfc.title }}]({{ rfc.url }})
 - **Discussions:** {% for discussion in rfc.discussions %}[#{{ loop.index }}]({{ discussion }}){% if not loop.last %}, {% endif %}{% endfor %}
@@ -13,7 +13,11 @@
 - **Target:** {{ rfc.targetPhpVersion }}
 - **Status:** {% if rfc.status == "rejected" %}Rejected{% else %}Accepted{% endif %}
 
-- **Votes:** {% for vote in rfc.currentResults %}{{ vote.votes }} {{ vote.option }}{% if not loop.last %}, {% endif %}{% endfor %}
+
+**Votes**:
+{% for vote in rfc.votes if vote.primaryVote %}
+- **{{ vote.question }}** {% for answer,count in vote.currentVotes %}{{ count }} {{ answer }}{% if not loop.last %}, {% endif %}{% endfor %}
+{% endfor %}
 
     </textarea>
 
