Small fix to admin export RFC screen to render all votes correctly.

--- a/templates/Default/adminExportRfc.html.twig
+++ b/templates/Default/adminExportRfc.html.twig
@@ -15,8 +15,9 @@
 
 
 **Votes**:
-{% for vote in rfc.votes if vote.primaryVote %}
-- **{{ vote.question }}** {% for answer,count in vote.currentVotes %}{{ count }} {{ answer }}{% if not loop.last %}, {% endif %}{% endfor %}
+{% for vote in rfc.votes %}
+- {{ vote.question }} {% for answer,count in vote.currentVotes %}{{ count }} {{ answer }}{% if not loop.last %}, {% endif %}{% endfor %}
+
 {% endfor %}
 
     </textarea>
