--- a/templates/Default/newsletter.html.twig
+++ b/templates/Default/newsletter.html.twig
@@ -1,10 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-<form id="newsletter_signup" name="newsletter_signup" method="POST" action="#" onsubmit="document.newsletter_signup.action='https://campaigns.tideways.io/signup';">
-    <input type="hidden" name="list" value="06b270ac-7323-11e8-9a3c-dab956361052">
-    <input type="hidden" name="url"/>
-
+<form id="newsletter_signup" name="newsletter_signup" method="POST" action="#" onsubmit="document.newsletter_signup.action='https://newsletters.tideways.io/subscribe/97f07ca9-5647-4760-895d-445aad8f3eaa';">
     <div class="mb-8 p-2">
         <p>
             We sent semi-automated updates whenever an RFC is accepted
