--- a/templates/Default/adminExportRfc.html.twig
+++ b/templates/Default/adminExportRfc.html.twig
@@ -10,7 +10,7 @@
 
 &lt;ul&gt;
 &lt;li&gt;&lt;strong&gt;RFC:&lt;/strong&gt; &lt;a href="{{ rfc.url }}"&gt;{{ rfc.title }}&lt;/a&gt;&lt;/li&gt;
-&lt;li&gt;&lt;strong&gt;Discussions:&lt;/strong&gt; {% for discussion in rfc.discussions %}&lt;a href="{{ discussion }}"&gt;{{ loop.index }}&lt;/a&gt;{% if not loop.last %}, {% endif %}{% endfor %
+&lt;li&gt;&lt;strong&gt;Discussions:&lt;/strong&gt; {% for discussion in rfc.discussions %}&lt;a href="{{ discussion }}"&gt;{{ loop.index }}&lt;/a&gt;{% if not loop.last %}, {% endif %}{% endfor %}
 &gt;
 
 &lt;li&gt;&lt;strong&gt;Target:&lt;/strong&gt; {{ rfc.targetPhpVersion }}&gt;
