--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -8,18 +8,18 @@
 </p>
 
 <div>
-    {{ _self.rfc_list("Currently Active RFCs", activeRfcs) }}
+    {{ _self.rfc_list("Currently Active RFCs", activeRfcs, logged_in) }}
 
     {% for phpVersion, rfcs in otherRfcs %}
-        {{ _self.rfc_list("Accepted RFCs for PHP " ~ phpVersion, rfcs) }}
+        {{ _self.rfc_list("Accepted RFCs for PHP " ~ phpVersion, rfcs, logged_in) }}
     {% endfor %}
 
-    {{ _self.rfc_list("Rejected RFCs", rejectedRfcs) }}
+    {{ _self.rfc_list("Rejected RFCs", rejectedRfcs, logged_in) }}
 </div>
 
 {% endblock %}
 
-{% macro rfc_list(title, rfcs) %}
+{% macro rfc_list(title, rfcs, logged_in) %}
 <div>
     <h2 id="{{ title }}" class="text-lg font-semibold mb-2 p-2 uppercase rfc-list-header">
         {{ title }}
@@ -73,13 +73,13 @@
                                 {% endfor %}
 
                                 <div class="text-gray text-xs mt-2 ml-4">
-                                    Total number of votes cast: <span class="font-normal">{question.totalCastedVotes}</span>
+                                    Total number of votes cast: <span class="font-normal">{{ question.votes }}</span>
                                 </div>
                             </div>
                         {% endfor %}
 
                         {% if rfc.status == 'open' %}
-                        <RfcCommunityVote rfc={this.props.rfc} />
+                        {{ _self.rfc_community_vote(rfc, logged_in) }}
                         {% endif %}
                     </div>
                 </div>
@@ -90,16 +90,19 @@
 {% endmacro %}
 
 {% macro rfc_discussion(rfc) %}
+{% if rfc.discussions|length > 0 %}
 <div class="text-xs text-gray-800 py-4">
     <strong>Discussions:</strong>
     <span>&nbsp;</span>
     {% for discussionUrl in rfc.discussions %}
-        <a href="{{ discussionUrl }}" target="_blank" style="white-space: 'nowrap'">
+        <a href="{{ discussionUrl }}" target="_blank" style="white-space: nowrap">
             #{{ loop.index }}
             {% if "externals.io" in discussionUrl %}
                 Mailinglist
             {% elseif "derickrethans.nl/phpinternalsnews" in discussionUrl %}
                 PHP Internals News
+            {% elseif "reddit" in discussionUrl %}
+                Reddit
             {% else %}
                 {{ discussionUrl }}
             {% endif %}
@@ -107,6 +110,7 @@
         {% if not loop.last %}, {% endif %}
     {% endfor %}
 </div>
+{% endif %}
 {% endmacro %}
 
 {% macro rfc_color(index) %}
@@ -121,26 +125,29 @@
         {% endif %}
 
         <span class="relative z-0 inline-flex shadow-sm">
-            {{ _self.tailwind_button_start("rounded-l-md", (not logged_in), logged_in ? "Login required") }}
-                <svg class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
-                </svg>
-                <span class="{% if rfc.communityVote.you == 1 %}font-bold{% endif %}">{{ rfc.communityVote.up }}</span>
-            </button>
-            {{ _self.tailwind_button_start("rounded-r-md", (not logged_in), logged_in ? "Login required") }}
-                <svg class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
-                </svg>
-                <span class="{% if rfc.communityVote.you == -1 %}font-bold{% endif %}">{{ communityVote.down }}</span>
-            </button>
+            <form method="POST" action="{{ path('vote') }}">
+                <input type="hidden" name="id" value="{{ rfc.id }}" />
+                {{ _self.tailwind_button_start("rounded-l-md", (not logged_in), logged_in ? "Login required", "choice", 1) }}
+                    <svg class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5"/>
+                    </svg>
+                    <span class="{% if rfc.communityVote.you == 1 %}font-bold{% endif %}">{{ rfc.communityVote.up }}</span>
+                </button>
+                {{ _self.tailwind_button_start("rounded-r-md", (not logged_in), logged_in ? "Login required", "choice", -1) }}
+                    <svg class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                          d="M10 14H5.236a2 2 0 01-1.789-2.894l3.5-7A2 2 0 018.736 3h4.018a2 2 0 01.485.06l3.76.94m-7 10v5a2 2 0 002 2h.096c.5 0 .905-.405.905-.904 0-.715.211-1.413.608-2.008L17 13V4m-7 10h2m5-10h2a2 2 0 012 2v6a2 2 0 01-2 2h-2.5"/>
+                    </svg>
+                    <span class="{% if rfc.communityVote.you == -1 %}font-bold{% endif %}">{{ rfc.communityVote.down }}</span>
+                </button>
+            </form>
         </span>
     </div>
 {% endmacro %}
 
-{% macro tailwind_button_start(className, disabled, title) %}
-<button type="button" title="{{ title }}"
+{% macro tailwind_button_start(className, disabled, title, name, value) %}
+<button type="submit" title="{{ title }}" value="{{ value }}" name="{{ name }}"
     class="relative inline-flex items-center px-2 py-2 border border-gray-300 bg-white text-sm leading-5 font-medium
         {% if not disabled %}text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150
         {% else %} text-gray-400{% endif %}">
