--- a/templates/Default/view.html.twig
+++ b/templates/Default/view.html.twig
@@ -9,7 +9,7 @@
 
     {% import 'Default/rfc_macros.html.twig' as rfcs %}
 
-    <div>
+    <div class="flex justify-center">
         {{ rfcs.rfc(rfc, logged_in) }}
     </div>
 
