Fix typo: sent => send

--- a/templates/Default/confirm.html.twig
+++ b/templates/Default/confirm.html.twig
@@ -4,10 +4,10 @@
 <div class="flex">
     <div class="w-full md:w-1/2 mx-auto p-2">
         <p class="mb-8">
-            We sent semi-automated updates whenever an RFC is accepted
+            We send semi-automated updates whenever an RFC is accepted
             or rejected by voting. Stop with the constant refresh of
             the PHP RFC Watch website and just get notified whenever a
-            vote closes. In addition we also sent updates about PHP
+            vote closes. In addition we also send updates about PHP
             major releases and all the new features included.
         </p>
 
