--- a/templates/Default/newsletter.html.twig
+++ b/templates/Default/newsletter.html.twig
@@ -4,10 +4,10 @@
 <form id="newsletter_signup" name="newsletter_signup" method="POST" action="#" onsubmit="document.newsletter_signup.action='https://newsletters.tideways.io/subscribe/97f07ca9-5647-4760-895d-445aad8f3eaa';">
     <div class="mb-8 p-2">
         <p>
-            We sent semi-automated updates whenever an RFC is accepted
+            We send semi-automated updates whenever an RFC is accepted
             or rejected by voting. Stop with the constant refresh of
             the PHP RFC Watch website and just get notified whenever a
-            vote closes. In addition we also sent updates about PHP
+            vote closes. In addition we also send updates about PHP
             major releases and all the new features included.
         </p>
     </div>
